// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` camera mapping test  works as planned:  Hiding pop-up 1`] = `
<div
  className="DirectorEle"
>
  {
  "field": {
    "type": 10,
    "mapTo": "operatorCameraMapping",
    "theme": "cameraMapping",
    "validate": {
      "type": 12,
      "validate": {
        "objectDef": [
          {
            "type": 13,
            "mapTo": "operator",
            "validate": {
              "relationshipNamePath": "email",
              "relationshipCollection": "users",
              "relationshipIdPath": "_id"
            }
          },
          {
            "type": 14,
            "mapTo": "cameras",
            "validate": {
              "relationshipNamePath": "name",
              "relationshipCollection": "cameras",
              "relationshipIdPath": "_id",
              "type": 2
            }
          }
        ]
      }
    }
  },
  "prefix": "shotEdit",
  "theme": "cameraMapping",
  "value": [
    {
      "operator": "u1",
      "cameras": [
        "c2bbbbbbbbbbbbbbbbbbbbbb"
      ]
    },
    {
      "operator": "u2",
      "cameras": []
    }
  ],
  "cameras": [
    "c1bbbbbbbbbbbbbbbbbbbbbb",
    "c2bbbbbbbbbbbbbbbbbbbbbb",
    "c3bbbbbbbbbbbbbbbbbbbbbb"
  ],
  "operators": [
    "u1",
    "u2",
    "u3"
  ],
  "showPopUp": false
}
</div>
`;

exports[` camera mapping test  works as planned:  One Operator with 2 camera 1`] = `
<div
  className="DirectorEle"
>
  {
  "field": {
    "type": 10,
    "mapTo": "operatorCameraMapping",
    "theme": "cameraMapping",
    "validate": {
      "type": 12,
      "validate": {
        "objectDef": [
          {
            "type": 13,
            "mapTo": "operator",
            "validate": {
              "relationshipNamePath": "email",
              "relationshipCollection": "users",
              "relationshipIdPath": "_id"
            }
          },
          {
            "type": 14,
            "mapTo": "cameras",
            "validate": {
              "relationshipNamePath": "name",
              "relationshipCollection": "cameras",
              "relationshipIdPath": "_id",
              "type": 2
            }
          }
        ]
      }
    }
  },
  "prefix": "shotEdit",
  "theme": "cameraMapping",
  "value": [
    {
      "operator": "u1",
      "cameras": [
        "c1bbbbbbbbbbbbbbbbbbbbbb",
        "c2bbbbbbbbbbbbbbbbbbbbbb"
      ]
    }
  ],
  "cameras": [
    "c1bbbbbbbbbbbbbbbbbbbbbb",
    "c2bbbbbbbbbbbbbbbbbbbbbb",
    "c3bbbbbbbbbbbbbbbbbbbbbb"
  ],
  "operators": [
    "u1",
    "u2",
    "u3"
  ],
  "showPopUp": true
}
</div>
`;

exports[` camera mapping test  works as planned:  One Operator with 2 camera And one with the one 1`] = `
<div
  className="DirectorEle"
>
  {
  "field": {
    "type": 10,
    "mapTo": "operatorCameraMapping",
    "theme": "cameraMapping",
    "validate": {
      "type": 12,
      "validate": {
        "objectDef": [
          {
            "type": 13,
            "mapTo": "operator",
            "validate": {
              "relationshipNamePath": "email",
              "relationshipCollection": "users",
              "relationshipIdPath": "_id"
            }
          },
          {
            "type": 14,
            "mapTo": "cameras",
            "validate": {
              "relationshipNamePath": "name",
              "relationshipCollection": "cameras",
              "relationshipIdPath": "_id",
              "type": 2
            }
          }
        ]
      }
    }
  },
  "prefix": "shotEdit",
  "theme": "cameraMapping",
  "value": [
    {
      "operator": "u1",
      "cameras": [
        "c1bbbbbbbbbbbbbbbbbbbbbb",
        "c2bbbbbbbbbbbbbbbbbbbbbb"
      ]
    },
    {
      "operator": "u2",
      "cameras": [
        "c3bbbbbbbbbbbbbbbbbbbbbb"
      ]
    }
  ],
  "cameras": [
    "c1bbbbbbbbbbbbbbbbbbbbbb",
    "c2bbbbbbbbbbbbbbbbbbbbbb",
    "c3bbbbbbbbbbbbbbbbbbbbbb"
  ],
  "operators": [
    "u1",
    "u2",
    "u3"
  ],
  "showPopUp": true
}
</div>
`;

exports[` camera mapping test  works as planned:  One Operator with one camera 1`] = `
<div
  className="DirectorEle"
>
  {
  "field": {
    "type": 10,
    "mapTo": "operatorCameraMapping",
    "theme": "cameraMapping",
    "validate": {
      "type": 12,
      "validate": {
        "objectDef": [
          {
            "type": 13,
            "mapTo": "operator",
            "validate": {
              "relationshipNamePath": "email",
              "relationshipCollection": "users",
              "relationshipIdPath": "_id"
            }
          },
          {
            "type": 14,
            "mapTo": "cameras",
            "validate": {
              "relationshipNamePath": "name",
              "relationshipCollection": "cameras",
              "relationshipIdPath": "_id",
              "type": 2
            }
          }
        ]
      }
    }
  },
  "prefix": "shotEdit",
  "theme": "cameraMapping",
  "value": [
    {
      "operator": "u1",
      "cameras": [
        "c1bbbbbbbbbbbbbbbbbbbbbb"
      ]
    }
  ],
  "cameras": [
    "c1bbbbbbbbbbbbbbbbbbbbbb",
    "c2bbbbbbbbbbbbbbbbbbbbbb",
    "c3bbbbbbbbbbbbbbbbbbbbbb"
  ],
  "operators": [
    "u1",
    "u2",
    "u3"
  ],
  "showPopUp": true
}
</div>
`;

exports[` camera mapping test  works as planned:  Showing pop-up 1`] = `
<div
  className="DirectorEle"
>
  {
  "field": {
    "type": 10,
    "mapTo": "operatorCameraMapping",
    "theme": "cameraMapping",
    "validate": {
      "type": 12,
      "validate": {
        "objectDef": [
          {
            "type": 13,
            "mapTo": "operator",
            "validate": {
              "relationshipNamePath": "email",
              "relationshipCollection": "users",
              "relationshipIdPath": "_id"
            }
          },
          {
            "type": 14,
            "mapTo": "cameras",
            "validate": {
              "relationshipNamePath": "name",
              "relationshipCollection": "cameras",
              "relationshipIdPath": "_id",
              "type": 2
            }
          }
        ]
      }
    }
  },
  "prefix": "shotEdit",
  "theme": "cameraMapping",
  "cameras": [
    "c1bbbbbbbbbbbbbbbbbbbbbb",
    "c2bbbbbbbbbbbbbbbbbbbbbb",
    "c3bbbbbbbbbbbbbbbbbbbbbb"
  ],
  "operators": [
    "u1",
    "u2",
    "u3"
  ],
  "showPopUp": true
}
</div>
`;

exports[` camera mapping test  works as planned:  after preparing operators and cameras  1`] = `
<div
  className="DirectorEle"
>
  {
  "field": {
    "type": 10,
    "mapTo": "operatorCameraMapping",
    "theme": "cameraMapping",
    "validate": {
      "type": 12,
      "validate": {
        "objectDef": [
          {
            "type": 13,
            "mapTo": "operator",
            "validate": {
              "relationshipNamePath": "email",
              "relationshipCollection": "users",
              "relationshipIdPath": "_id"
            }
          },
          {
            "type": 14,
            "mapTo": "cameras",
            "validate": {
              "relationshipNamePath": "name",
              "relationshipCollection": "cameras",
              "relationshipIdPath": "_id",
              "type": 2
            }
          }
        ]
      }
    }
  },
  "prefix": "shotEdit",
  "theme": "cameraMapping",
  "cameras": [
    "c1bbbbbbbbbbbbbbbbbbbbbb",
    "c2bbbbbbbbbbbbbbbbbbbbbb",
    "c3bbbbbbbbbbbbbbbbbbbbbb"
  ],
  "operators": [
    "u1",
    "u2",
    "u3"
  ]
}
</div>
`;

exports[` camera mapping test  works as planned:  two Operator with one camera 1`] = `
<div
  className="DirectorEle"
>
  {
  "field": {
    "type": 10,
    "mapTo": "operatorCameraMapping",
    "theme": "cameraMapping",
    "validate": {
      "type": 12,
      "validate": {
        "objectDef": [
          {
            "type": 13,
            "mapTo": "operator",
            "validate": {
              "relationshipNamePath": "email",
              "relationshipCollection": "users",
              "relationshipIdPath": "_id"
            }
          },
          {
            "type": 14,
            "mapTo": "cameras",
            "validate": {
              "relationshipNamePath": "name",
              "relationshipCollection": "cameras",
              "relationshipIdPath": "_id",
              "type": 2
            }
          }
        ]
      }
    }
  },
  "prefix": "shotEdit",
  "theme": "cameraMapping",
  "value": [
    {
      "operator": "u1",
      "cameras": [
        "c2bbbbbbbbbbbbbbbbbbbbbb"
      ]
    },
    {
      "operator": "u2",
      "cameras": [
        "c3bbbbbbbbbbbbbbbbbbbbbb"
      ]
    }
  ],
  "cameras": [
    "c1bbbbbbbbbbbbbbbbbbbbbb",
    "c2bbbbbbbbbbbbbbbbbbbbbb",
    "c3bbbbbbbbbbbbbbbbbbbbbb"
  ],
  "operators": [
    "u1",
    "u2",
    "u3"
  ],
  "showPopUp": true
}
</div>
`;

exports[` camera mapping test  works as planned: Before anything 1`] = `
<div
  className="DirectorEle"
>
  {
  "field": {
    "type": 10,
    "mapTo": "operatorCameraMapping",
    "theme": "cameraMapping",
    "validate": {
      "type": 12,
      "validate": {
        "objectDef": [
          {
            "type": 13,
            "mapTo": "operator",
            "validate": {
              "relationshipNamePath": "email",
              "relationshipCollection": "users",
              "relationshipIdPath": "_id"
            }
          },
          {
            "type": 14,
            "mapTo": "cameras",
            "validate": {
              "relationshipNamePath": "name",
              "relationshipCollection": "cameras",
              "relationshipIdPath": "_id"
            }
          }
        ]
      }
    }
  },
  "prefix": "shotEdit",
  "theme": "cameraMapping",
  "cameras": [],
  "operators": []
}
</div>
`;

exports[` camera mapping test  works as planned: remove all camearas of one operator 1`] = `
<div
  className="DirectorEle"
>
  {
  "field": {
    "type": 10,
    "mapTo": "operatorCameraMapping",
    "theme": "cameraMapping",
    "validate": {
      "type": 12,
      "validate": {
        "objectDef": [
          {
            "type": 13,
            "mapTo": "operator",
            "validate": {
              "relationshipNamePath": "email",
              "relationshipCollection": "users",
              "relationshipIdPath": "_id"
            }
          },
          {
            "type": 14,
            "mapTo": "cameras",
            "validate": {
              "relationshipNamePath": "name",
              "relationshipCollection": "cameras",
              "relationshipIdPath": "_id",
              "type": 2
            }
          }
        ]
      }
    }
  },
  "prefix": "shotEdit",
  "theme": "cameraMapping",
  "value": [
    {
      "operator": "u1",
      "cameras": [
        "c2bbbbbbbbbbbbbbbbbbbbbb"
      ]
    },
    {
      "operator": "u2",
      "cameras": []
    }
  ],
  "cameras": [
    "c1bbbbbbbbbbbbbbbbbbbbbb",
    "c2bbbbbbbbbbbbbbbbbbbbbb",
    "c3bbbbbbbbbbbbbbbbbbbbbb"
  ],
  "operators": [
    "u1",
    "u2",
    "u3"
  ],
  "showPopUp": true
}
</div>
`;
